--- a/package.json
+++ b/package.json
@@ -9,21 +9,23 @@
     "deploy": "npm install && npm run typings-install && npm run tsc-build && npm publish ./"
   },
   "devDependencies": {
-    "typescript": "~1.8.10",
-    "typings": "~1.3.0",
-    "tslint": "^3.7.1",
+    "jasmine-core": "2.4.1",
+
+    "karma": "0.13.22",
+    "karma-chrome-launcher": "2.0.0",
+    "karma-coverage": "1.0.0",
+    "karma-jasmine": "1.0.2",
+    "karma-webpack": "1.8.0",
+
+    "awesome-typescript-loader": "^2.2.1",
     "ts-helpers": "1.1.1",
-    "awesome-typescript-loader": "1.1.1",
+    "ts-node": "^1.3.0",
+    "tslint": "3.15.0-dev.0",
     "tslint-loader": "^2.1.3",
+    "typescript": "2.0.0",
+    "typings": "1.3.3",
 
-    "karma": "^0.13.22",
-    "karma-webpack": "1.7.0",
-    "karma-coverage": "^1.0.0",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "karma-jasmine": "^1.0.2",
-
-    "jasmine-core": "^2.4.1",
-    "webpack": "^1.13.1"
+    "webpack": "^2.1.0-beta.21"
   },
   "repository": {
     "type": "git",
